@@ -1,2 +1,3 @@
 /.sass-cache
 /TODO.txt
+/templates/slick-thumbnail.tpl.php
