@@ -14,15 +14,16 @@
  * Main display has class "slick--display--main".
  * Thumbnail has class "slick--display--thumbnail".
  */
-// Workaround tips: as of now, 9/3/14, avoid centerMode for slideToShow > 3.
-$thumbnail-spacing: 30px !default;
+// Tips: make sure to use odd number for slideToShow with centerMode on.
+$thumbnail-spacing: 20px !default;
+$thumbnail-horz-spacing: 30px !default;
 .slick--display--thumbnail.slick--skin--asnavfor {
   margin: 0 auto;
   padding: 0;
   width: 96%;
   .slick-list {
-    margin: 0 -$thumbnail-spacing;
-    padding: $thumbnail-spacing;
+    margin: 0 (-$thumbnail-spacing);
+    padding: 30px $thumbnail-spacing *2;
   }
 
   .slick__slide {
@@ -38,10 +39,6 @@ $thumbnail-spacing: 30px !default;
       width: 100%;
     }
 
-    &.slick-active {
-      opacity: 1;
-    }
-    &.slick-center,
     &.slide--current {
       @include box-shadow(0 0 10px rgba(0,0,0,.4));
       @include transform(scale(1.3));
@@ -65,7 +62,16 @@ $thumbnail-spacing: 30px !default;
         border-color: $white;
       }
     }
+
+    &.slick-active {
+      opacity: 1;
+    }
+    &.slick-center,
+    &.slide--current {
+
+    }
   }
+
 
   &.slick--center {
     .slick-track {
@@ -73,6 +79,9 @@ $thumbnail-spacing: 30px !default;
       padding-top: $thumbnail-spacing * 2;
     }
     .slick__slide {
+      opacity: 0;
+    }
+    .slick-active {
       opacity: 1;
     }
   }
